depoly/servers/gateway/svc-gateway.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-gateway-server
spec:
  selector:
    app: gateway-server
  ports:
    - name: http-gateway-8763
      port: 8763
      protocol: TCP
      targetPort: 8763
